nextcloud/08-redis-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: redis
    type: statefulset
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
      type: pod
  template:
    metadata:
      labels:
        app: redis
        type: pod
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
