nextcloud/13-nextcloud-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    type: statefulset
spec:
  serviceName: "nextcloud"
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      type: pod
  template:
    metadata:
      labels:
        app: nextcloud
        type: pod
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html/
            name: config
          - mountPath: /var/www/html/data/
            name: data
          # - mountPath: /var/www/html/config/custom.config.php
          #   name: custom
          #   subPath: custom.config.php           
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: data
        persistentVolumeClaim:
          claimName: data
      # - name: custom
      #   configMap:
      #     name: nextcloud
      #     items:
      #       - key: custom.config.php
      #         path: custom.config.php
