nextcloud/14-nextcloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/server-snippet: |-
      server_tokens off;
      proxy_hide_header X-Powered-By;
      rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
      location = /.well-known/carddav { return 301 $scheme://$host/remote.php/dav; }
      location = /.well-known/caldav { return 301 $scheme://$host/remote.php/dav; }
      location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ { deny all; }
      location ~ ^/(?:autotest|occ|issue|indie|db_|console) { deny all; }
      location = /robots.txt {
        allow all;
        log_not_found off;
        access_log off;
      }
spec:
  tls:
  - hosts:
      - "nextcloud.domain.tld"
    secretName: "nextcloud-tls"
  rules:
  - host: "nextcloud.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "nextcloud"
            port:
              number: 80
